feat(expressions): Add unsafe expressions !{expr} for full JavaScript evaluation
- Add !{expr} syntax for unsafe mode with full JS expressions (operators, methods, ternary)
- Add ExpressionParser.evaluateUnsafe() using new Function()
- Support !{} in templates, veda-if conditions, veda-loop items
- Add XSS protection: sanitize results with zero-width space, mark processed nodes
- Add :prop binding support for native elements (fixes browser warnings on type="number")
- Update documentation with security guidelines and CSP requirements
- Add unsafe-expressions example demonstrating the feature

--- a/examples/src/index.html
+++ b/examples/src/index.html
@@ -24,6 +24,12 @@
       </a>
     </li>
     <li>
+      <a href="unsafe-expressions.html">
+        <strong>Unsafe Expressions !{ }</strong>
+        <span>Full JavaScript in templates: operators, ternary, methods</span>
+      </a>
+    </li>
+    <li>
       <a href="loop-if-demo.html">
         <strong>Loop & If Components</strong>
         <span>Conditional rendering and list iteration</span>
